[gd_scene load_steps=12 format=3 uid="uid://b2ylc066dbc24"]

[ext_resource type="Script" path="res://Scripts/UI/terminal.gd" id="1_ftfjq"]
[ext_resource type="PackedScene" uid="uid://d04w0asci7apg" path="res://Scenes/UI/Components/CodeInput.tscn" id="1_gmysd"]
[ext_resource type="PackedScene" uid="uid://2k5ire51woed" path="res://Scenes/UI/CodeBulbs.tscn" id="2_nrffk"]
[ext_resource type="Texture2D" uid="uid://crdma4ms31wts" path="res://Assets/Textures/UI Screens/TerminalUI/terminal_send_button_sheet.png" id="4_mfn2n"]
[ext_resource type="FontFile" uid="uid://b11wk7udkbr1a" path="res://Assets/Fonts/NanoPlus.ttf" id="5_vgc5f"]
[ext_resource type="Texture2D" uid="uid://cw6olboougiyx" path="res://Assets/Textures/UI Screens/TerminalUI/terminal_send_button_focused_sheet.png" id="5_x85as"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lt424"]
bg_color = Color(0.678431, 0.85098, 0.737255, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y34j"]
atlas = ExtResource("4_mfn2n")
region = Rect2(0, 0, 98, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv7m0"]
atlas = ExtResource("5_x85as")
region = Rect2(0, 42, 98, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rophu"]
atlas = ExtResource("5_x85as")
region = Rect2(0, 0, 98, 42)

[sub_resource type="LabelSettings" id="LabelSettings_5ti1r"]
font = ExtResource("5_vgc5f")
font_color = Color(0.0509804, 0.101961, 0.101961, 1)

[node name="Terminal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ftfjq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lt424")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 159.0
grow_horizontal = 2
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CodeList" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="CodeInput" parent="MarginContainer/VBoxContainer/CodeList" instance=ExtResource("1_gmysd")]
layout_mode = 2

[node name="CodeInput2" parent="MarginContainer/VBoxContainer/CodeList" instance=ExtResource("1_gmysd")]
layout_mode = 2

[node name="CodeInput3" parent="MarginContainer/VBoxContainer/CodeList" instance=ExtResource("1_gmysd")]
layout_mode = 2

[node name="CodeInput4" parent="MarginContainer/VBoxContainer/CodeList" instance=ExtResource("1_gmysd")]
layout_mode = 2

[node name="CodeInput5" parent="MarginContainer/VBoxContainer/CodeList" instance=ExtResource("1_gmysd")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = 295.0
grow_vertical = 0

[node name="CodeBulbs" parent="MarginContainer2" instance=ExtResource("2_nrffk")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -78.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="SendCode" type="TextureButton" parent="MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = SubResource("AtlasTexture_2y34j")
texture_pressed = SubResource("AtlasTexture_tv7m0")
texture_hover = SubResource("AtlasTexture_rophu")
ignore_texture_size = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -24.0
offset_right = 79.0
grow_horizontal = 2
grow_vertical = 0
text = "Press Backspace / B Button to Close"
label_settings = SubResource("LabelSettings_5ti1r")

[connection signal="pressed" from="MarginContainer3/SendCode" to="." method="_on_send_code_pressed"]
